--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -301,7 +301,7 @@
                             <div class="container">
                                 <div class="row">
                                     <div class="col-12">
-                                        <a href="/sharepoint-helpdesk/">HelpDesk</a>
+                                        <a href="/sharepoint-helpdesk/">Forms</a>
                                         <span>›</span>
                                         <a href="{{ pathto(master_doc) }}">Docs</a>
                                         <span>›</span>
