Fixed Forms links and Breadcrumb

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -275,9 +275,9 @@
                                                 <div class="mega-subcat mega-subcat--forms">
                                                     <a href="/forms/" class="mega-subcat__title">Forms</a>
                                                     <div class="mega-subcat__links">
-                                                        <a href="#" target="/docs/forms/">Documentation</a>
-                                                        <a href="#" target="/forms/store/">Pricing</a>
-                                                        <a href="/sharepoint-forms-designer/support/">Support</a>
+                                                        <a href="/docs/forms/">Documentation</a>
+                                                        <a href="/forms/store/">Pricing</a>
+                                                        <a href="/forms/support/">Support</a>
                                                     </div>
                                                 </div>
                                                 <div class="mega-subcat mega-subcat--formsdesigner">
@@ -337,7 +337,7 @@
                                 <div class="col-12"  style="padding-left:10px;">
                                     <a href="/forms/">Forms</a>
                                     <span>›</span>
-                                    <a href="{{ pathto(master_doc) }}">Docs</a>
+                                    <a href="{{ pathto(master_doc) }}">Table of contents</a>
                                     <span>›</span>
                                     {% for doc in parents %}
                                     <a href="{{ doc.link|e }}">{{ doc.title }}</a>
