Changed Documentation to Table of contents

--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -337,7 +337,7 @@
                                 <div class="col-12"  style="padding-left:10px;">
                                     <a href="/forms/">Forms</a>
                                     <span>›</span>
-                                    <a href="{{ pathto(master_doc) }}">Table of contents</a>
+                                    <a href="{{ pathto(master_doc) }}">Documentation</a>
                                     <span>›</span>
                                     {% for doc in parents %}
                                     <a href="{{ doc.link|e }}">{{ doc.title }}</a>
