--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -2,6 +2,8 @@
 
 {%- block htmltitle %}
   {% set script_files = script_files + ["_static/myscript.js"] %}
+  {%- set titlesuffix = " &mdash; Plumsail Forms " %}
+  <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
   <!-- Licensed under the Apache 2.0 License -->
   <link rel="stylesheet" type="text/css" href="{{ pathto('_static/fonts/open-sans/stylesheet.css', 1) }}" />
   <!-- Licensed under the SIL Open Font License -->
