--- a/SharePoint/_templates/layout.html
+++ b/SharePoint/_templates/layout.html
@@ -394,7 +394,7 @@
           </ul>
         </nav>
         <div class="footer__copyright">
-          © 2011 - 2019 Plumsail. All rights reserved | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/refund-policy/">Refund policy</a>
+          © 2011 - <script>document.write(new Date().getFullYear())</script> Plumsail. All rights reserved | <a href="/privacy-policy/">Privacy Policy</a> | <a href="/refund-policy/">Refund policy</a>
         </div>
       </div>
     </div>
