--- a/Public/_templates/layout.html
+++ b/Public/_templates/layout.html
@@ -106,6 +106,7 @@
                                                 <li id="menu-item-152" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-152"><a target="_blank" href="https://medium.com/plumsail">Blog</a></li>
                                                 <li id="menu-item-20708" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20708"><a href="/partners-and-resellers/">Partners</a></li>
                                                 <li id="menu-item-20707" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20707"><a href="/company/">Company</a></li>
+                                                <li id="menu-item-20707" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-20707"><a href="https://account.plumsail.com/">Account</a></li>
                                             </ul>                    
                                         </ul>
                                     </nav>
@@ -176,6 +177,7 @@
                                                         <li class=''><a target="_blank" href="https://medium.com/plumsail">Blog</a></li>
                                                         <li class=''><a href="/partners-and-resellers/">Partners</a></li>
                                                         <li class=''><a href="/company/">Company</a></li>
+                                                        <li class=''><a href="https://account.plumsail.com/">Account</a></li>
                                                     </ul>                            
                                                 </ul>
                                                 <ul class="follow-us follow-us--mobile-menu">
@@ -391,6 +393,7 @@
             <li class=""><a target="_blank" href="https://medium.com/plumsail">Blog</a></li>
             <li class=""><a href="/partners-and-resellers/">Partners</a></li>
             <li class=""><a href="/company/">Company</a></li>
+            <li class=""><a href="https://account.plumsail.com/">Account</a></li>
           </ul>
         </nav>
         <div class="footer__copyright">
