--- a/Public/_templates/layout.html
+++ b/Public/_templates/layout.html
@@ -2,8 +2,7 @@
 
 {%- block htmltitle %}
   {% set script_files = script_files + ["_static/myscript.js"] %}
-  {%- set titlesuffix = " &mdash; Plumsail Forms " %}
-  <title>{{ title|striptags|e }}{{ titlesuffix }}</title>
+  <title>{{ title|striptags|e }}</title>
   <!-- Licensed under the Apache 2.0 License -->
   <link rel="stylesheet" type="text/css" href="{{ pathto('_static/fonts/open-sans/stylesheet.css', 1) }}" />
   <!-- Licensed under the SIL Open Font License -->
