--- a/Public/_templates/globaltoc.html
+++ b/Public/_templates/globaltoc.html
@@ -1,11 +1,8 @@
-
-<div class="sidebar-block">  
-  <div class="sidebar-toc">
-    {% set toctree = toctree(maxdepth=2, collapse=True, includehidden=True) %}
-    {% if toctree %}
-      {{ toctree }}
-    {% else %}
-      {{ toc }}
-    {% endif %}
-  </div>
+<div class="table-of-content">
+  {% set toctree = toctree(maxdepth=3, collapse=True, includehidden=True) %}
+  {% if toctree %}
+    {{ toctree }}
+  {% else %}
+    {{ toc }}
+  {% endif %}
 </div>
