--- a/SharePoint/_templates/searchbox.html
+++ b/SharePoint/_templates/searchbox.html
@@ -3,7 +3,7 @@
   <div class="sidebar-wrapper">
     <div id="main-search">
       <form class="form-inline" action="{{ pathto('search') }}" method="GET" role="form">
-        <div class="input-group">
+        <div class="input-group" id="search-input">
           <input name="q" type="text" class="form-control" placeholder="Search...">
         </div>
         <input type="hidden" name="check_keywords" value="yes" />
